# ruigeo

./: Cargo.toml  LICENSE  README.md  index.html
ig_macro/: Cargo.toml
ig_macro/src/: lib.rs
src/: ig.rs  lib.rs
src/ig/: agent.rs  geo.rs  gl.rs  math.rs
src/ig/shader/: fragment.glsl  fragment_line.glsl  vertex.glsl  vertex_bg.glsl
src/shader/: fragment.glsl  fragment_bg.glsl  vertex_line.glsl  vertex_point.glsl
