[package]
name = "ruigeo"
version = "0.1.0"
edition = "2021"


[lib]
crate_type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.53"
wasm-bindgen = "0.2.76"
console_error_panic_hook = "=0.1.5"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
ig_macro = { path = "ig_macro", version = "0.1.0" }


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'console',
]
